infrastructure/containers.tf
# create an ECR repository
resource "aws_ecr_repository" "api" {
    name = "live-translation-api"
    force_delete = true
}

resource "aws_ecs_cluster" "main" {
  name = "live-translation-cluster"
}

resource "aws_ecs_task_definition" "api" {
  family                   = "live-translation-api"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = "256"
  memory                   = "512"

  depends_on = [ aws_elasticache_serverless_cache.api ]

  container_definitions = jsonencode([
    {
      name      = "live-translation-api"
      image     = "${aws_ecr_repository.api.repository_url}:latest"
      essential = true
      
      # add environment variables
      environment = [
        {
          name  = "REDIS_HOST"
          value = "${aws_elasticache_serverless_cache.api.endpoint[0].address}"
        }
      ]      
      portMappings = [
        {
          containerPort = 80
          hostPort      = 80
        }
      ]
      healthCheck = {
        command     = ["CMD-SHELL", "curl -f http://localhost:80/ || exit 1"]
        interval    = 30
        timeout     = 5
        retries     = 3
        startPeriod = 60
      }
    }
  ])

  execution_role_arn = aws_iam_role.ecs_task_execution_role.arn
  task_role_arn      = aws_iam_role.ecs_task_execution_role.arn
}

resource "aws_ecs_service" "api" {
  name            = "live-translation-api"
  depends_on      = [ aws_lb_target_group.api, aws_lb.api ]

  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.api.arn
  desired_count   = 1
  launch_type     = "FARGATE"

  network_configuration {
    subnets         = aws_subnet.main.*.id
    security_groups = [aws_security_group.main.id]
    assign_public_ip = true # this is super important! https://stackoverflow.com/questions/61265108/aws-ecs-fargate-resourceinitializationerror-unable-to-pull-secrets-or-registry
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.api.arn
    container_name   = "live-translation-api"
    container_port   = 80
  }
}

resource "aws_iam_role" "ecs_task_execution_role" {
  name = "ecsTaskExecutionRole"

  assume_role_policy = jsonencode({
    Version = "2012-10-17",
    Statement = [
      {
        Action = "sts:AssumeRole",
        Effect = "Allow",
        Principal = {
          Service = "ecs-tasks.amazonaws.com"
        }
      }
    ]
  })
}

resource "aws_iam_role_policy_attachment" "ecs_task_execution_role_policy" {
  role       = aws_iam_role.ecs_task_execution_role.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

resource "aws_lb" "api" {
  name               = "api-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.main.id]
  subnets            = aws_subnet.main.*.id

  enable_deletion_protection = false

  tags = {
    Name = "api-alb"
  }
}

resource "aws_lb_target_group" "api" {
  name     = "api-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id
  target_type = "ip" 

  health_check {
    path                = "/"
    protocol            = "HTTP"
    port                = 80
  }

  tags = {
    Name = "api-tg"
  }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.api.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.api.arn
  }
}

resource "aws_lb_listener" "https" {
  load_balancer_arn = aws_lb.api.arn
  port              = "443"
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = aws_acm_certificate.api_cert.arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.api.arn
  }
}
